--- a/src/components/ImageLinkForm/imageLinkForm.css
+++ b/src/components/ImageLinkForm/imageLinkForm.css
@@ -1,12 +1,19 @@
-.form{
-    width: 600px;
-background:
-linear-gradient(135deg, #708090 21px, #d9ecff 22px, #d9ecff 24px, transparent 24px, transparent 67px, #d9ecff 67px, #d9ecff 69px, transparent 69px),
-linear-gradient(225deg, #708090 21px, #d9ecff 22px, #d9ecff 24px, transparent 24px, transparent 67px, #d9ecff 67px, #d9ecff 69px, transparent 69px)0 64px;
-background-color:#708090;
-background-size: 64px 128px;
+.form {
+  width: 600px;
 }
-
-img{
-    display: inline;
+.btn {
+  outline: transparent;
+  border: transparent;
+  border-radius: 4px;
+}
+.input{
+    outline: transparent;
+}
+img {
+  display: inline;
+}
+.imageLinkBtn{
+  background: transparent;
+  border: groove 1px black;
+  color: black;
 }
