--- a/src/index.css
+++ b/src/index.css
@@ -1,30 +1,41 @@
 body {
   margin: 0;
-  font-family:'Courier New', Courier, monospace;
-  background-image: linear-gradient(89deg, #ff5edf 0%, #04C8DE 100%);
-  text-align: center;
+  font-family: 'Courier New', Courier, monospace;
+  background-color: #fbab7e;
+  background-image: -webkit-linear-gradient(62deg, #fbab7e 0%, #f7ce68 100%);
+  background-image: -moz-linear-gradient(62deg, #fbab7e 0%, #f7ce68 100%);
+  background-image: -o-linear-gradient(62deg, #fbab7e 0%, #f7ce68 100%);
+  background-image: linear-gradient(62deg, #fbab7e 0%, #f7ce68 100%);
 }
-.center{
+.center {
   display: flex;
   justify-content: center;
 }
-button{
+
+button {
   cursor: pointer;
 }
-.particles{
+.particles {
   position: fixed;
+  width: auto;
+  height: auto;
   top: 0;
   right: 0;
   bottom: 0;
   left: 0;
   z-index: -1;
 }
-.celebName{
-  width: 7rem;
+.celebName {
   font-family: cursive;
 }
-.textCeleb{
+.textCeleb {
   font-size: 15px;
   font-family: cursive;
   text-transform: lowercase;
+}
+
+.signinForm {
+  max-width: 95vw;
+  margin-left: 8px;
+  text-align: center;
 }
